<?xml version="1.0"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ferreira"
    android:gravity="center"
    android:padding="20dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/layout_shadow_gray"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="#2E7D32"
                android:textSize="30dp" />

            <!-- android:background="@drawable/titulo" -->

            <Button
                android:id="@+id/bupoemas"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="120dp"
                android:alpha="1"
                android:background="@drawable/layout_shadow_green"
                android:onClick="poemas"
                android:text="@string/bot1"
                android:textColor="#FFF"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buquiz"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/layout_shadow_green"
                android:onClick="quiz"
                android:text="@string/bot2"
                android:textColor="#FFF"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/bubibli"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/layout_shadow_green"
                android:onClick="bibli"
                android:text="@string/bot3"
                android:textColor="#FFF"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buajuda"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/layout_shadow_green"
                android:onClick="ajuda"
                android:text="@string/bot4"
                android:textColor="#FFF"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>